# cgenff_charmm2gmx

./: .gitignore  LICENSE  README.md  cgenff_charmm2gmx.py  cgenff_charmm2gmx_py2.py  cgenff_charmm2gmx_py3_nx1.py  cgenff_charmm2gmx_py3_nx2.py  pyproject.toml  requirements.txt
legacy_scripts/: cgenff_charmm2gmx_py2.py  cgenff_charmm2gmx_py3_nx2.py  requirements-3.7.txt
tests/: test_cgenff_charmm2gmx.py
tests/output_3.7/: jz4.itp  jz4.prm  jz4.top
tests/test_data/: jz4.str  jz4_fix.mol2
tests/test_data/charmm36_ljpme-jul2022.ff/: aminoacids.c.tdb  aminoacids.hdb  aminoacids.n.tdb  aminoacids.r2b  aminoacids.rtp  atomtypes.atp  carb.c.tdb  carb.hdb  carb.n.tdb  carb.r2b  carb.rtp  cgenff.c.tdb  cgenff.hdb  cgenff.n.tdb  cgenff.r2b  cgenff.rtp  cmap.itp  ethers.c.tdb  ethers.hdb  ethers.n.tdb  ethers.r2b  ethers.rtp  ffbonded.itp  ffmissingdihedrals.itp  ffnonbonded.itp  forcefield.doc  forcefield.itp  ions.itp  lipid.c.tdb  lipid.hdb  lipid.n.tdb  lipid.r2b  lipid.rtp  metals.c.tdb  metals.hdb  metals.n.tdb  metals.r2b  metals.rtp  na.c.tdb  na.hdb  (+14 more)
